this is commit from other guy

--- a/src/app/Component/about/about.component.html
+++ b/src/app/Component/about/about.component.html
@@ -41,9 +41,9 @@ Controls portion sizes
         
         <div class="image__title0">Features
         </div>
-        <div class="image__title1">healthy diet</div>
-        <div class="image__title2">Customize diet plan </div>
-        <div class="image__title3">Security Alerts
+        <div class="image__title1">healthy dietsssss</div>
+        <div class="image__title2">Customize diet planssssss </div>
+        <div class="image__title3">Security Alertssssssssss
         </div>
         
         <div class="image__title4">Easy Bookings And Payments
